fixing spacing

--- a/CSS3/css/vertical.css
+++ b/CSS3/css/vertical.css
@@ -58,9 +58,9 @@ nav a {
 }
 
 section {
-    width:30%;
+    width:28%;
     height: 250px;
-    margin-right: 42%;
+    margin-right: 32%;
     float: right;
     padding: 2px;
 }
